--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -19,7 +19,9 @@
             <androidx.recyclerview.widget.RecyclerView
                 android:id="@+id/activity_main_recyclerView"
                 android:layout_width="match_parent"
-                android:layout_height="match_parent" />
+                android:layout_height="match_parent"
+                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
+                />
 
         </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
         <ProgressBar
